# pinball_space_cadet_forever

./: .gitignore  LICENSE  README.md  build.ps1  makefile  patchPinball.py  reverse_engineering_notes.txt  utils.py
memoryHacker/: .metadata  README.md  assembly.cpp  main.cpp  pubspec.yaml
memoryHacker/lib/: config.dart  main.dart
memoryHacker/lib/pages/: control_page.dart
memoryHacker/lib/pages/control_page/: control_page.dart
memoryHacker/lib/pages/control_page/widgets/: button.dart  hack_toggle_button.dart  line.dart
memoryHacker/lib/utils/: constants.dart  native_bridge.dart  utils.dart
memoryHacker/lib/widgets/: background.dart  piece.dart
memoryHacker/native_library/: CMakeLists.txt  build.ps1  native.c  native.cpp  native.def  native.h
memoryHacker/test/: widget_test.dart
memoryHacker/windows/: CMakeLists.txt
memoryHacker/windows/runner/: Runner.rc  main.cpp  win32_window.cpp
memoryHackerPOC/: assembly.h  main.cpp  makefile
src/: main.cpp
